versioned_docs/version-2.8/reference/subsystems/golang.mdx
---
title: golang
description: |
  Options for Golang support.
---

import Option from "@site/src/components/reference/Option";
import styles from "@site/src/components/reference/styles.module.css";

---

Options for Golang support.

Backend: <span className="color--primary">``</span>

Config section: <span className="color--primary">`[golang]`</span>

<span className={styles.options}>

## Basic options

### `expected_version`

<Option
  cli_repr={`--golang-expected-version=<str>`}
  env_repr='PANTS_GOLANG_EXPECTED_VERSION'
  toml_repr={`[golang]
expected_version = <str>`}
  default_repr={`1.17`}
>

The Go version you are using, such as `1.17`.

Pants will only use Go distributions from `--go-search-paths` that have the expected version, and it will error if none are found.

Do not include the patch version.

</Option>

### `go_search_paths`

<Option
  cli_repr={`--golang-go-search-paths="['<str>', '<str>', ...]"`}
  env_repr='PANTS_GOLANG_GO_SEARCH_PATHS'
  toml_repr={`[golang]
go_search_paths = [
    '<str>',
    '<str>',
    ...,
]`}
  default_repr={`[\n  "<PATH>"\n]`}
>

A list of paths to search for Go.

Specify absolute paths to directories with the `go` binary, e.g. `/usr/bin`. Earlier entries will be searched first.

The special string &#x27;&#x3C;PATH&#x3E;&#x27; will expand to the contents of the PATH env var.

</Option>

## Advanced options

None

## Deprecated options

None

## Related subsystems

None

</span>
